# beardataclass

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/beardataclass/: cls.py  cls_test.py
