[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
  {name = "Christian Gebbe", email = ""}
]
dependencies = [
  "pandas"
]
description = ""
license = {text = "MIT"}
name = "BearDataClass"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[[tool.mypy.overrides]]
module = [
  "assertpy",
  "toolz"
]

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["**/*_test.py"]

[tool.pdm.dev-dependencies]
check = [
  "mypy",
  "pandas-stubs"
]
dev = [
  "ipykernel"
]
# from https://docs.astral.sh/ruff/configuration/
lint = [
  "pre-commit"
]
test = [
  "pytest"
]

[tool.pdm.scripts]
all = {composite = ["lint", "check", "test"]}
check = "mypy src"
lint = "pre-commit run --all-files"
test = "pytest -vv src"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
indent-width = 4
# Same as Black.
line-length = 88

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
ignore = [
  "D",  # pydocstyle
  "ANN",  # missing type annotations
  "T201",  # allow print
  "T203",  # allow pprint
  "TD",  # allow simple TODOs and FIXMEs
  "FIX",  # allow FIXMEs
  "S101",  # allow asserts
  "PD901",  # df is a bad variable name
  "G004"  # allow f-strings in logging
]
select = ["ALL"]
unfixable = []
